eks/3-Part3/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: "order-ingress"
  #namespace: "default"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: order
spec:
  rules:
    - http:
        paths:
          - path: /order
            backend:
              serviceName: "order-svc"
              servicePort: 8080
          - path: /neworder
            backend:
              serviceName: "neworder-svc"
              servicePort: 8080
          - path: /
            backend:
              serviceName: "order-svc"
              servicePort: 8080
